// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div>
  <h1>
    My ExpenseList
  </h1>
  <h2>
    Total Expenses
  </h2>
  <Connect(ExpensesSummary) />
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div>
  <h1>
    My ExpenseList
  </h1>
  <Connect(ExpenseListItem)
    amount={195}
    createdAt={0}
    description="Gum"
    id="1"
    key="1"
    note=""
  />
  <Connect(ExpenseListItem)
    amount={109500}
    createdAt={-345600000}
    description="Rent"
    id="2"
    key="2"
    note=""
  />
  <Connect(ExpenseListItem)
    amount={4500}
    createdAt={345600000}
    description="Credit Card"
    id="3"
    key="3"
    note=""
  />
  <h2>
    Total Expenses
  </h2>
  <Connect(ExpensesSummary) />
</div>
`;
